# buck2-fixups

./: .buckconfig  .dockerignore  .gitattributes  .gitignore  BUCK  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Earthfile  LICENSE-MIT  README.md  buckify-all.sh  build-all.sh  check-linux-on-mac.sh  ci.sh  extend.sh  mint-snapshot.sh  reindeer.toml  test-cell.sh  test.sh  update.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-helper.yml
allocative/: fixups.toml
bellpepper-core/: fixups.toml
borsh/: fixups.toml
cedar-policy-cli/: fixups.toml
chrono-tz/: fixups.toml
ci/: expected-failures-Darwin-arm64.txt  expected-failures-Linux-aarch64.txt  expected-failures-Linux-x86_64.txt  expected-failures-Windows-aarch64.txt  expected-failures-Windows-x86_64.txt  upstream-bug-from_any_dir.md  win-cc-diag.sh  win-shrink-check.sh
console-subscriber/: fixups.toml
curve25519-dalek/: fixups.toml
curve25519-dalek-ng/: fixups.toml
derive_builder_core/: fixups.toml
devicemapper-sys/: fixups.toml
fixups/alloca/: fixups.toml
fixups/aquamarine/: fixups.toml
fixups/async-io/: fixups.toml
fixups/aws-lc-sys/: fixups.toml
fixups/aws-types/: fixups.toml
fixups/backtrace/: fixups.toml
fixups/basic-toml/: fixups.toml
fixups/bitvec/: fixups.toml
fixups/borsh/: fixups.toml
fixups/bstr/: fixups.toml
fixups/bytecheck/: fixups.toml
fixups/cc/: fixups.toml
fixups/cedar-policy-cli/: fixups.toml
fixups/cedar-policy-core/: fixups.toml
fixups/cfg-expr/: fixups.toml
fixups/color-spantrace/: fixups.toml
fixups/compact_str/: fixups.toml
fixups/compiler_builtins/: fixups.toml
fixups/const-random-macro/: fixups.toml
fixups/crc24/: fixups.toml
fixups/crc32c/: fixups.toml
fixups/crc32fast/: fixups.toml
fixups/crossbeam-epoch/: fixups.toml
fixups/crossterm/: fixups.toml
fixups/curve25519-dalek-ng/: fixups.toml
fixups/devicemapper/: fixups.toml
fixups/dirs-sys/: fixups.toml
fixups/errno/: fixups.toml
fixups/errno-dragonfly/: fixups.toml
fixups/error-chain/: fixups.toml
fixups/failure_derive/: fixups.toml
fixups/frame-support/: fixups.toml
fixups/frame-system-rpc-runtime-api/: fixups.toml
fixups/fuser/: fixups.toml
fixups/generator/: fixups.toml
fixups/glutin/: fixups.toml
fixups/hcl-primitives/: fixups.toml
fixups/heapless/: fixups.toml
fixups/html5ever/: fixups.toml
fixups/hyper/: fixups.toml
fixups/iana-time-zone-haiku/: fixups.toml
fixups/icu_list_data/: fixups.toml
fixups/im/: fixups.toml
fixups/insta/: fixups.toml
fixups/inventory/: fixups.toml
fixups/jam-codec/: fixups.toml
fixups/jam-types/: fixups.toml
fixups/jni/: fixups.toml
fixups/jni-macros/: fixups.toml
fixups/jsonrpsee-core/: fixups.toml
fixups/lalrpop-util/: fixups.toml
fixups/libgit2-sys/: fixups.toml
fixups/libloading/: fixups.toml
fixups/librocksdb-sys/: fixups.toml
fixups/libsodium-sys/: fixups.toml
fixups/libsqlite3-sys/: fixups.toml
fixups/libssh2-sys/: fixups.toml
fixups/libtugraph-sys/: fixups.toml
fixups/libz-sys/: fixups.toml
fixups/lock_api/: fixups.toml
fixups/lzma-sys/: fixups.toml
fixups/mach/: fixups.toml
fixups/markup5ever/: fixups.toml
fixups/maybe-uninit/: fixups.toml
fixups/mockall/: fixups.toml
fixups/mockall_derive/: fixups.toml
fixups/moka/: fixups.toml
fixups/mongodb/: fixups.toml
fixups/names/: fixups.toml
fixups/neptune/: fixups.toml
fixups/nix/: fixups.toml
fixups/num-rational/: fixups.toml
fixups/openssl/: fixups.toml
fixups/openssl-sys/: fixups.toml
fixups/opentelemetry-proto/: fixups.toml
fixups/pallet-contracts/: fixups.toml
fixups/parity-scale-codec/: fixups.toml
fixups/pastey/: fixups.toml
fixups/pgp/: fixups.toml
fixups/picosimd/: fixups.toml
fixups/polkavm/: fixups.toml
fixups/portable-atomic-util/: fixups.toml
fixups/proc-macro-nested/: fixups.toml
fixups/proc-macro-warning/: fixups.toml
fixups/procfs/: fixups.toml
fixups/prost/: fixups.toml
fixups/prost-build/: fixups.toml
fixups/protobuf/: fixups.toml
fixups/protobuf-src/: fixups.toml
fixups/pyo3-build-config/: fixups.toml
fixups/pyo3-ffi/: fixups.toml
fixups/quinn/: fixups.toml
fixups/rand/: fixups.toml
fixups/rav1e/: fixups.toml
fixups/rdkafka-sys/: fixups.toml
fixups/ring/: fixups.toml
fixups/rust-crypto/: fixups.toml
fixups/rust-i18n/: fixups.toml
fixups/rust_decimal/: fixups.toml
fixups/rustc_version_runtime/: fixups.toml
fixups/rustls-pki-types/: fixups.toml
fixups/rustls-webpki/: fixups.toml
fixups/sc-sysinfo/: fixups.toml
fixups/scale-info/: fixups.toml
fixups/schemafy/: fixups.toml
fixups/semver/: fixups.toml
fixups/sentry/: fixups.toml
fixups/sentry-contexts/: fixups.toml
fixups/serde/: fixups.toml
fixups/serde_derive/: fixups.toml
fixups/serde_yml/: fixups.toml
fixups/signal-hook-mio/: fixups.toml
fixups/slotmap/: fixups.toml
fixups/snafu/: fixups.toml
fixups/socket2/: fixups.toml
fixups/sp-api/: fixups.toml
fixups/sp-consensus-slots/: fixups.toml
fixups/sp-metadata-ir/: fixups.toml
fixups/sqlx/: fixups.toml
fixups/sqlx-postgres/: fixups.toml
fixups/sqlx-rt/: fixups.toml
fixups/ssz_rs/: fixups.toml
fixups/stacker/: fixups.toml
fixups/starlark_syntax/: fixups.toml
fixups/static_init/: fixups.toml
git2/: fixups.toml
gix/: fixups.toml
iana-time-zone/: fixups.toml
im/: fixups.toml
jsonptr/: fixups.toml
libsqlite3-sys/: fixups.toml
logos-codegen/: fixups.toml
lzma-sys/: fixups.toml
multer/: fixups.toml
num-rational/: fixups.toml
openssl-sys/: fixups.toml
opentelemetry/: fixups.toml
opentelemetry_sdk/: fixups.toml
p384/: fixups.toml
portable-atomic/: fixups.toml
prelude/: .gitignore  attrs_validators.bzl
proc-macro-warning/: fixups.toml
pyo3/: fixups.toml
pyo3-ffi/: fixups.toml
rapier2d/: fixups.toml
rdkafka-sys/: fixups.toml
rusqlite/: fixups.toml
rust_decimal/: fixups.toml
rustls-webpki/: fixups.toml
system-configuration-sys/: fixups.toml
tera/: fixups.toml
toolchains/: BUCK
win/: BUCK
windows_x86_64_msvc/: fixups.toml
(+46 files in other folders)
