[package]
name = "rust-third-party"
version = "0.0.0"
edition = "2021"
publish = false

# Dummy target to keep Cargo happy
[[bin]]
name = "top"
path = "top/main.rs"

[dependencies]
# There exists at least one version where buck builds this crate
ahash = "0.8.11"
allocative = "0.3.4"
anyhow = "1.0.98"
arrayvec = "0.7.6"
assert_cmd = "2.0.17"
assert_matches = "1.5.0"
async-io = "2.4.0"
async-trait = "0.1.88"
atomic = "0.6.0"
aws-types = "1.3.7"
axum = "0.8.4"
axum-core = "0.5.2"
backtrace = "0.3.74"
bigdecimal = "0.4.8"
bindgen = "0.71.1"
# bitcoin-internals = "0.4.0"
bitcoin-private = "0.1.0"
# blake3 = "1.8.2"
# blst = "0.3.14"
bytecheck = "0.8.1"
bzip2-sys = "0.1.13+1.0.8"
# camino = "1.1.9"
cc = "1.0.49"
# cedar-policy-cli = "4.4.0"
# cedar-policy-core = "4.4.0"
# cedar-policy-validator = "4.4.0"
chrono-tz = "0.10.3"
# clang-sys = "1.8.1"
clear_on_drop = "0.2.5"
# compiler_builtins = "0.1.157"
const_fn = "0.4.11"
cookie = "0.18.1"
core-foundation-sys = "0.8.7"
cpp_demangle = "0.4.4"
crc32c = "0.6.8"
crc32fast = "1.4.2"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
crunchy = "0.2.3"
curve25519-dalek = "4.1.3"
curve25519-dalek-ng = "4.1.1"
cxx = "1.0.158"
darwin-libproc-sys = "0.2.0"
# devicemapper-sys = "0.3.1"
# devicemapper = "0.34.0"
doc-comment = "0.3.3"
erased-serde = "0.4.6"
ethnum-intrinsics = "1.2.0"
# expander = "2.2.1"
eyre = "0.6.12"
fastrace = "0.7.9"
figment = "0.10.19"
# findshlibs = "0.10.2"
flatbuffers = "25.2.10"
# frame-benchmarking-cli = "47.0.0"
fs-err = "3.1.0"
# fuser = "0.15.1"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
generic-array = "1.2.0"
getrandom = "0.3.2"
# grpcio-sys = "0.13.0+1.56.2-patched"
guppy-workspace-hack = "0.1.0"
halo2curves = "0.8.0"
hashbrown = "0.15.3"
heapless = "0.8.0"
# hickory-resolver = "0.25.2"
# http-types = "2.12.0"
httparse = "1.10.1"
# hyper-openssl = "0.10.2"
hyper = "1.6.0"

icu_locid_transform_data = "1.5.1"
icu_normalizer_data = "1.5.1"
icu_properties_data = "1.5.1"
indexmap = "2.9.0"
insta = "1.43.1"
io-lifetimes = "2.0.4"
# ipconfig = "0.3.2"
jemalloc-sys = "0.5.4"
json5 = "0.4.1"
jsonptr = "0.7.1"
jsonrpsee-core = "0.25.1"
lexical-core = "1.0.5"
libc = "0.2.172"
# libgit2-sys = "0.18.1"
libm = "0.2.14"
# librocksdb-sys = "6.20.3"
libsecp256k1 = "0.7.2"
# libsodium-sys = "0.2.7"
# libsqlite3-sys = "0.33.0"
# libssh2-sys = "0.3.1"
# libtugraph-sys = "0.1.2"
# libz-sys = "1.1.22"
link-cplusplus = "1.0.10"
linkme-impl = "0.3.32"
# litep2p = "0.9.4"
lock_api = "0.4.12"
log = "0.4.27"
logos-codegen = "0.15.0"
lz4-sys = "1.11.1"
lzma-sys = "0.1.20"
matrixmultiply = "0.3.9"
memchr = "2.7.4"
memoffset = "0.9.1"
# mime_guess = "2.0.5"
minicbor = "0.26.5"
# moka = "0.12.10"
multer = "3.1.0"
# names = "0.14.0"
# native-tls = "0.2.14"
# neptune = "13.0.0"
# nix = "0.30.1"
nom = "8.0.0"
# ntapi = "0.4.1"
num-bigint = "0.4.6"
num-bigint-dig = "0.8.4"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
object = "0.36.7"
portable-atomic-util = "0.2.4"
tracing = "0.1.41"
typeid = "1.0.3"

# Commented out until figure out how to stop
# buck2 building win crates on other OSes
# [target.'cfg(windows)'.dependencies]
# winapi = "0.3.9"
