[package]
name = "rust-third-party"
version = "0.0.0"
edition = "2021"
publish = false

# Dummy target to keep Cargo happy
[[bin]]
name = "top"
path = "top/main.rs"

[dependencies]
# There exists at least one version where buck builds this crate
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
ahash = "0.8.11"
allocative = "0.3.4"
anyhow = "1.0.98"
argon2 = "0.5.3"
arrayvec = "0.7.6"
asn1_der = "0.7.6"
assert_cmd = "2.0.17"
assert_matches = "1.5.0"
async-io = "2.4.0"
async-trait = "0.1.88"
atomic = "0.6.0"
aws-lc-sys = "0.28.2"
aws-types = "1.3.7"
axum = "0.8.4"
axum-core = "0.5.2"
backtrace = "0.3.74"
base64ct = "1.7.3"
basic-toml = "0.1.10"
bcrypt-pbkdf = "0.10.0"
bigdecimal = "0.4.8"
bindgen = "0.71.1"
# bitcoin-internals = "0.4.0"
bitcoin-private = "0.1.0"
# blake3 = "1.8.2"
# blst = "0.3.14"
# borsh = "1.5.7"
bstr = "1.12.0"
bytecheck = "0.8.1"
bzip2-sys = "0.1.13+1.0.8"
# camino = "1.1.9"
cc = "1.0.49"
# cedar-policy-cli = "4.4.0"
# cedar-policy-core = "4.4.0"
# cedar-policy-validator = "4.4.0"
chrono-tz = "0.10.3"
# clang-sys = "1.8.1"
clear_on_drop = "0.2.5"
# compiler_builtins = "0.1.157"
const_fn = "0.4.11"
const-oid = "0.10.1"
cookie = "0.18.1"
core-foundation-sys = "0.8.7"
cpp_demangle = "0.4.4"
crc24 = "0.1.6"
crc32c = "0.6.8"
crc32fast = "1.4.2"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
crunchy = "0.2.3"
crypto-bigint = "0.6.1"
curve25519-dalek = "4.1.3"
curve25519-dalek-derive = "0.1.1"
curve25519-dalek-ng = "4.1.1"
# cxx = "1.0.158" - has problems building in docker
darwin-libproc-sys = "0.2.0"
der = "0.7.10"
dsa = "0.6.3"
# devicemapper-sys = "0.3.1"
# devicemapper = "0.34.0"
doc-comment = "0.3.3"
ecdsa = "0.16.9"
ed25519 = "2.2.3"
elliptic-curve = "0.13.8"
erased-serde = "0.4.6"
ethnum-intrinsics = "1.2.0"
# expander = "2.2.1"
eyre = "0.6.12"
fastrace = "0.7.9"
figment = "0.10.19"
# findshlibs = "0.10.2"
flatbuffers = "25.2.10"
# frame-benchmarking-cli = "47.0.0"
fs-err = "3.1.0"
# fuser = "0.15.1"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
generic-array = "1.2.0"
getrandom = "0.3.2"
# grpcio-sys = "0.13.0+1.56.2-patched"
guppy-workspace-hack = "0.1.0"
halo2curves = "0.8.0"
hashbrown = "0.15.3"
hcl-edit = "0.8.6"
hcl-primitives = "0.1.8"
hcl-rs = "0.18.5"
heapless = "0.8.0"
hex-literal = "1.0.0"
# hickory-resolver = "0.25.2"
# http-types = "2.12.0"
httparse = "1.10.1"
# hyper-openssl = "0.10.2"
hyper = "1.6.0"
icu_list_data = "1.5.1"
icu_locid_transform_data = "1.5.1"
icu_normalizer_data = "1.5.1"
icu_properties_data = "1.5.1"
indexmap = "2.9.0"
insta = "1.43.1"
internal-russh-forked-ssh-key = "0.6.10"
io-lifetimes = "2.0.4"
# ipconfig = "0.3.2"
jemalloc-sys = "0.5.4"
json5 = "0.4.1"
jsonptr = "0.7.1"
jsonrpsee-core = "0.25.1"
lexical-core = "1.0.5"
libc = "0.2.172"
# libgit2-sys = "0.18.1"
libm = "0.2.14"
# librocksdb-sys = "6.20.3"
libsecp256k1 = "0.7.2"
# libsodium-sys = "0.2.7"
# libsqlite3-sys = "0.33.0"
# libssh2-sys = "0.3.1"
# libtugraph-sys = "0.1.2"
# libz-sys = "1.1.22"
link-cplusplus = "1.0.10"
linkme-impl = "0.3.32"
# litep2p = "0.9.4"
lock_api = "0.4.12"
log = "0.4.27"
logos-codegen = "0.15.0"
lz4-sys = "1.11.1"
lzma-sys = "0.1.20"
matrixmultiply = "0.3.9"
memchr = "2.7.4"
memoffset = "0.9.1"
# mime_guess = "2.0.5"
minicbor = "0.26.5"
# moka = "0.12.10"
multer = "3.1.0"
# names = "0.14.0"
# native-tls = "0.2.14"
# neptune = "13.0.0"
# nix = "0.30.1"
nom = "8.0.0"
# ntapi = "0.4.1"
num-bigint = "0.4.6"
num-bigint-dig = "0.8.4"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
object = "0.36.7"
ocb3 = "0.1.0"
oid-registry = "0.8.1"
# openssl = "0.10.72"
# openssl-sys = "0.9.108"
opentelemetry-proto = "0.29.0"
owo-colors = "4.2.0"
# packed_simd_2 = "0.3.8"
p521 = "0.13.3"
parity-scale-codec = "3.7.4"
parking_lot = "0.12.3"
parking_lot_core = "0.9.10"
password-hash = "0.5.0"
paste = "1.0.15"
pem-rfc7468 = "0.7.0"
pgp = "0.15.0"
pin-project-internal = "1.1.10"
pkcs1 = "0.7.5"
pkcs5 = "0.7.1"
pkcs8 = "0.10.2"
platforms = "3.5.0"
polling = "3.7.4"
portable-atomic = "1.11.0"
portable-atomic-util = "0.2.4"
# pprof = "0.14.0"
# pq-sys = "0.7.1"
prettyplease = "0.2.32"
primeorder = "0.13.6"
proc-macro-error = "1.0.4"
proc-macro-error-attr = "1.0.4"
proc-macro-hack = "0.5.20"
proc-macro-warning = "1.84.1"
proc-macro2 = "1.0.95"
proc-macro2-diagnostics = "0.10.1"
# procfs = "0.17.0"
prometheus = "0.14.0"
prometheus-client = "0.23.1"
prost-build = "0.13.5"
# protobuf = "3.7.2"
# protobuf-src = "2.1.1"
# psm = "0.1.26"
pulldown-cmark = "0.13.0"
# pyo3 = "0.24.2"
pyo3-build-config = "0.24.2"
pyo3-ffi = "0.24.2"
# quinn = "0.11.7"
quinn-udp = "0.5.12"
quote = "1.0.40"
radium = "1.1.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rayon-core = "1.12.1"
# rdkafka-sys = "4.8.0"
redb = "2.5.0"
ref-cast = "1.0.24"
rend = "0.5.2"
rfc6979 = "0.4.0"
ron = "0.10.1"
rsa = "0.9.8"
# Ring has version specific fixups, so pin to a specific supported version.
# (PRs welcome to support additional versions)
# ring = "=0.17.5"
rkyv = "0.8.10"
rstest_macros = "0.25.0"
# rusoto_core = "0.48.0"
# russh = "0.52.0"
rust-i18n = "3.1.4"
rustls-pki-types = "1.12.0"
# rust_decimal = "1.37.1"
rustc_apfloat = "0.2.2"
rustix = "1.0.7"
# rustls = "0.23.26"
# rustls-webpki = "0.103.1"
rustversion = "1.0.20"
rustc_version_runtime = "0.3.0"
# sc-consensus-slots = "0.48.0"
# sc-executor-wasmtime = "0.38.0"
# sc-network = "0.49.1"
# sc-network-light = "0.48.0"
# sc-network-sync = "0.48.0"
# sc-sysinfo = "42.0.0"
schemars = "0.8.22"
scratch = "1.0.8"
sec1 = "0.7.3"
# secp256k1-sys = "0.11.0"
semver = "1.0.26"
serde = "1.0.219"
serde_asn1_der = "0.8.0"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha1-asm = "0.5.3"
sha1-checked = "0.10.0"
sha2-asm = "0.6.4"
signal-hook = "0.3.17"
signature = "2.2.0"
slab = "0.4.9"
slog = "2.7.0"
spki = "0.7.3"
snap = "1.1.1"
snow = "0.9.6"
# sp-io = "40.0.1"
sqlx-postgres = "0.8.5"
ss58-registry = "1.51.0"
ssh-cipher = "0.2.0"
ssh-encoding = "0.2.0"
# stacker = "0.2.21"
standback = "0.4.4"
# starlark = "0.13.0"
# starlark_map = "0.13.0"
# starlark_syntax = "0.13.0"
static_init_macro = "1.0.4"
subtle-ng = "2.5.0"
symbolic-demangle = "12.15.5"
syn = "2.0.101"
# sys-info = "0.9.1"
system-configuration-sys = "0.6.0"
target-lexicon = "0.13.2"
# target-spec = "3.4.2"
target-triple = "0.1.4"
tempfile = "3.19.1"
tera = "1.20.0"
terminfo = "0.9.0"
test-case = "3.3.1"
# test-fuzz = "7.2.0"
# test-fuzz-internal = "7.2.0"
test-fuzz-macro = "7.2.0"
# test-fuzz-runtime = "7.2.0"
thiserror = "2.0.12"
# tikv-jemalloc-sys = "0.6.0" - can't do with jemalloc-sys
time = "0.3.41"
tiny-keccak = "2.0.2"
tokio = "1.44.2"
# tokio-openssl = "0.6.5"
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
trybuild = "1.0.104"
typeid = "1.0.3"
uncased = "0.9.10"
unicase = "2.8.1"
unicode-linebreak = "0.1.5"
vecmap-rs = "0.2.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-shared = "0.2.100"
wasmparser = "0.230.0"
# wasm-opt-sys = "0.116.0"
# wasmtime-runtime = "20.0.2"
windows-targets = "0.53.0"
windows_aarch64_gnullvm = "0.53.0"
windows_x86_64_gnu = "0.53.0"
windows_x86_64_gnullvm = "0.53.0"
windows_x86_64_msvc = "0.53.0"
# winreg = "0.55.0"
x25519-dalek = "2.0.1"
x86 = "0.52.0"
zerocopy = "0.8.25"
# zstd-safe = "7.2.4"
# zstd-sys = "2.0.15"

# Commented out until figure out how to stop
# buck2 building win crates on other OSes
# [target.'cfg(windows)'.dependencies]
# 
# winapi = "0.3.9"
# winapi-x86_64-pc-windows-gnu = "0.4.0"
