[package]
name = "rust-third-party"
version = "0.0.0"
edition = "2021"
publish = false

# Dummy target to keep Cargo happy
[[bin]]
name = "top"
path = "top/main.rs"

[dependencies]
# There exists at least one version where buck builds this crate
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
ahash = "0.8.12"
aho-corasick = "1.1.3"
allocative = "0.3.4"
anyhow = "1.0.98"
autocfg = "1.4.0"
argon2 = "0.5.3"
ark-vrf = "0.1.0"
arrayvec = "0.7.6"
asn1_der = "0.7.6"
assert_cmd = "2.0.17"
assert_matches = "1.5.0"
async-io = "2.4.0"
async-trait = "0.1.88"
atomic = "0.6.0"
aws-lc-sys = "0.29.0"
aws-types = "1.3.7"
axum = "0.8.4"
axum-core = "0.5.2"
backtrace = "0.3.75"
base64 = "0.22.1"
base64ct = "1.7.3"
basic-toml = "0.1.10"
bcrypt-pbkdf = "0.10.0"
bigdecimal = "0.4.8"
bindgen = "0.71.1"
# bitcoin-internals = "0.4.0"
bitcoin-private = "0.1.0"
bitflags = "2.9.0"
# blake3 = "1.8.2"
block-buffer = "0.11.0-rc.4"
# blst = "0.3.14"
# borsh = "1.5.7"
bstr = "1.12.0"
bytecheck = "0.8.1"
byteorder = "1.5.0"
bytes = "1.10.1"
bzip2-sys = "0.1.13+1.0.8"
# camino = "1.1.9"
cc = "1.2.22"
# cedar-policy-cli = "4.4.0"
# cedar-policy-core = "4.4.0"
# cedar-policy-validator = "4.4.0"
cfg-if = "1.0.0"
chrono = "0.4.41"
chrono-tz = "0.10.3"
# clang-sys = "1.8.1"
clap = "4.5.38"
clear_on_drop = "0.2.5"
color-spantrace = "0.2.2"
# compiler_builtins = "0.1.157"
const_fn = "0.4.11"
const-oid = "0.10.1"
cookie = "0.18.1"
core-foundation-sys = "0.8.7"
cpp_demangle = "0.4.4"
crc24 = "0.1.6"
crc32c = "0.6.8"
crc32fast = "1.4.2"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
crunchy = "0.2.3"
crypto-bigint = "0.6.1"
curve25519-dalek = "4.1.3"
curve25519-dalek-derive = "0.1.1"
curve25519-dalek-ng = "4.1.1"
# cxx = "1.0.158" - has problems building in docker
darwin-libproc-sys = "0.2.0"
der = "0.7.10"
dsa = "0.6.3"
# devicemapper-sys = "0.3.1"
# devicemapper = "0.34.0"
doc-comment = "0.3.3"
digest = "0.11.0-pre.10"
ecdsa = "0.16.9"
ed25519 = "2.2.3"
either = "1.15.0"
elliptic-curve = "0.13.8"
erased-serde = "0.4.6"
ethnum-intrinsics = "1.2.0"
# expander = "2.2.1"
eyre = "0.6.12"
fastrace = "0.7.9"
fastrand = "2.3.0"
figment = "0.10.19"
# findshlibs = "0.10.2"
flatbuffers = "25.2.10"
fnv = "1.0.7"
# frame-benchmarking-cli = "47.0.0"
fs-err = "3.1.0"
# fuser = "0.15.1"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
generic-array = "1.2.0"
getrandom = "0.3.3"
# grpcio-sys = "0.13.0+1.56.2-patched"
guppy-workspace-hack = "0.1.0"
halo2curves = "0.8.0"
hashbrown = "0.15.3"
hcl-edit = "0.8.6"
hcl-primitives = "0.1.8"
hcl-rs = "0.18.5"
heapless = "0.8.0"
heck = "0.5.0"
hex-literal = "1.0.0"
# hickory-resolver = "0.25.2"
http = "1.3.1"
http-body = "1.0.1"
# http-types = "2.12.0"
httparse = "1.10.1"
# hyper-openssl = "0.10.2"
hyper = "1.6.0"
icu_list_data = "1.5.1"
icu_locid_transform_data = "1.5.1"
icu_normalizer_data = "1.5.1"
icu_properties_data = "1.5.1"
idna = "1.0.3"
indexmap = "2.9.0"
insta = "1.43.1"
internal-russh-forked-ssh-key = "0.6.10"
io-lifetimes = "2.0.4"
itertools = "0.14.0"
itoa = "1.0.15"
# ipconfig = "0.3.2"
jemalloc-sys = "0.5.4"
json5 = "0.4.1"
jsonptr = "0.7.1"
jsonrpsee-core = "0.25.1"
lazy_static = "1.5.0"
lexical-core = "1.0.5"
libc = "0.2.172"
# libgit2-sys = "0.18.1"
libm = "0.2.14"
# librocksdb-sys = "6.20.3"
libsecp256k1 = "0.7.2"
# libsodium-sys = "0.2.7"
# libsqlite3-sys = "0.33.0"
# libssh2-sys = "0.3.1"
# libtugraph-sys = "0.1.2"
# libz-sys = "1.1.22"
link-cplusplus = "1.0.10"
linkme-impl = "0.3.32"
linux-raw-sys = "0.9.4"
# litep2p = "0.9.4"
lock_api = "0.4.12"
log = "0.4.27"
logos-codegen = "0.15.0"
lz4-sys = "1.11.1"
lzma-sys = "0.1.20"
matrixmultiply = "0.3.9"
memchr = "2.7.4"
memoffset = "0.9.1"
# mime_guess = "2.0.5"
minicbor = "0.26.5"
miniz_oxide = "0.8.8"
mio = "1.0.3"
# moka = "0.12.10"
multer = "3.1.0"
# names = "0.14.0"
# native-tls = "0.2.14"
# neptune = "13.0.0"
# nix = "0.30.1"
nom = "8.0.0"
# ntapi = "0.4.1"
num-bigint = "0.4.6"
num-bigint-dig = "0.8.4"
num_cpus = "1.16.0"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
object = "0.36.7"
ocb3 = "0.1.0"
oid-registry = "0.8.1"
# openssl = "0.10.72"
# openssl-sys = "0.9.108"
once_cell = "1.21.3"
opentelemetry-proto = "0.29.0"
owo-colors = "4.2.0"
# packed_simd_2 = "0.3.8"
p521 = "0.13.3"
parity-scale-codec = "3.7.4"
parking_lot = "0.12.3"
parking_lot_core = "0.9.10"
password-hash = "0.5.0"
paste = "1.0.15"
pem-rfc7468 = "0.7.0"
percent-encoding = "2.3.1"
pgp = "0.15.0"
pin-project-internal = "1.1.10"
pin-project-lite = "0.2.16"
pin-utils = "0.1.0"
pkcs1 = "0.7.5"
pkcs5 = "0.7.1"
pkcs8 = "0.10.2"
platforms = "3.5.0"
polling = "3.7.4"
portable-atomic = "1.11.0"
portable-atomic-util = "0.2.4"
# pprof = "0.14.0"
# pq-sys = "0.7.1"
pkg-config = "0.3.32"
ppv-lite86 = "0.2.21"
prettyplease = "0.2.32"
primeorder = "0.13.6"
proc-macro-error = "1.0.4"
proc-macro-error-attr = "1.0.4"
proc-macro-hack = "0.5.20"
proc-macro-warning = "1.84.1"
proc-macro2 = "1.0.95"
proc-macro2-diagnostics = "0.10.1"
# procfs = "0.17.0"
prometheus = "0.14.0"
prometheus-client = "0.23.1"
prost-build = "0.13.5"
# protobuf = "3.7.2"
# protobuf-src = "2.1.1"
# psm = "0.1.26"
pulldown-cmark = "0.13.0"
# pyo3 = "0.24.2"
pyo3-build-config = "0.24.2"
pyo3-ffi = "0.24.2"
# quinn = "0.11.7"
quinn-udp = "0.5.12"
quote = "1.0.40"
radium = "1.1.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rayon-core = "1.12.1"
# rdkafka-sys = "4.8.0"
redb = "2.5.0"
ref-cast = "1.0.24"
regex = "1.11.1"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
rend = "0.5.2"
rfc6979 = "0.4.0"
ron = "0.10.1"
rsa = "0.9.8"
# Ring has version specific fixups, so pin to a specific supported version.
# (PRs welcome to support additional versions)
# ring = "=0.17.5"
rkyv = "0.8.10"
rstest_macros = "0.25.0"
# rusoto_core = "0.48.0"
# russh = "0.52.0"
rust-i18n = "3.1.4"
rustls-pki-types = "1.12.0"
# rust_decimal = "1.37.1"
rustc_apfloat = "0.2.2"
rustc_version = "0.4.1"
rustix = "1.0.7"
# rustls = "0.23.26"
# rustls-webpki = "0.103.1"
rustversion = "1.0.20"
rustc_version_runtime = "0.3.0"
ryu = "1.0.20"
# sc-consensus-slots = "0.48.0"
# sc-executor-wasmtime = "0.38.0"
# sc-network = "0.49.1"
# sc-network-light = "0.48.0"
# sc-network-sync = "0.48.0"
# sc-sysinfo = "42.0.0"
scale-info = "2.11.6"
schemars = "0.8.22"
scopeguard = "1.2.0"
scratch = "1.0.8"
sec1 = "0.7.3"
# secp256k1-sys = "0.11.0"
semver = "1.0.26"
serde = "1.0.219"
serde_asn1_der = "0.8.0"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha1-asm = "0.5.3"
sha1-checked = "0.10.0"
sha2 = "0.10.9"
sha2-asm = "0.6.4"
signal-hook = "0.3.17"
signature = "2.2.0"
slab = "0.4.9"
slog = "2.7.0"
smallvec = "1.15.0"
snap = "1.1.1"
snow = "0.9.6"
socket2 = "0.5.9"
spki = "0.7.3"
spin = "0.10.0"
# sp-io = "40.0.1"
sqlx-postgres = "0.8.5"
ss58-registry = "1.51.0"
ssh-cipher = "0.2.0"
ssh-encoding = "0.2.0"
# stacker = "0.2.21"
standback = "0.4.4"
# starlark = "0.13.0"
# starlark_map = "0.13.0"
# starlark_syntax = "0.13.0"
static_init_macro = "1.0.4"
strsim = "0.11.1"
subtle-ng = "2.5.0"
symbolic-demangle = "12.15.5"
syn = "2.0.101"
# sys-info = "0.9.1"
system-configuration-sys = "0.6.0"
target-lexicon = "0.13.2"
# target-spec = "3.4.2"
target-triple = "0.1.4"
tempfile = "3.20.0"
tera = "1.20.0"
terminfo = "0.9.0"
test-case = "3.3.1"
# test-fuzz = "7.2.0"
# test-fuzz-internal = "7.2.0"
test-fuzz-macro = "7.2.0"
# test-fuzz-runtime = "7.2.0"
thiserror = "2.0.12"
# tikv-jemalloc-sys = "0.6.0" - can't do with jemalloc-sys
time = "0.3.41"
tiny-keccak = "2.0.2"
tinyvec = "1.9.0"
thiserror-impl = "2.0.12"
tokio = "1.45.0"
tokio-util = "0.7.15"
toml = "0.8.22"
# tokio-openssl = "0.6.5"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-opentelemetry = "0.30.0"
trybuild = "1.0.104"
typeid = "1.0.3"
typenum = "1.18.0"
uncased = "0.9.10"
unicase = "2.8.1"
unicode-linebreak = "0.1.5"
unicode-ident = "1.0.18"
unicode-normalization = "0.1.24"
url = "2.5.4"
vecmap-rs = "0.2.3"
version_check = "0.9.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-shared = "0.2.100"
wasmparser = "0.230.0"
# wasm-opt-sys = "0.116.0"
# wasmtime-runtime = "20.0.2"
windows-sys = "0.59.0"
windows-targets = "0.53.0"
windows_aarch64_gnullvm = "0.53.0"
# windows_aarch64_msvc = "0.53.0"
# windows_i686_gnu = "0.53.0"
# windows_i686_msvc = "0.53.0"
windows_x86_64_gnu = "0.53.0"
windows_x86_64_gnullvm = "0.53.0"
windows_x86_64_msvc = "0.53.0"
# winreg = "0.55.0"
x25519-dalek = "2.0.1"
x86 = "0.52.0"
zerocopy = "0.8.25"
# zstd-safe = "7.2.4"
# zstd-sys = "2.0.15"

# Commented out until figure out how to stop
# buck2 building win crates on other OSes
# [target.'cfg(windows)'.dependencies]
# 
# winapi = "0.3.9"
# winapi-x86_64-pc-windows-gnu = "0.4.0"


addr2line = "0.24.2"
adler = "1.0.2"
# atty = "0.2.14"
clap_builder = "4.5.38"
clap_derive = "4.5.32"
clap_lex = "0.7.4"
cpufeatures = "0.2.17"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crypto-common = "0.2.0-rc.2"
darling = "0.20.11"
darling_core = "0.20.11"
darling_macro = "0.20.11"
encoding_rs = "0.8.35"
env_logger = "0.11.8"
equivalent = "1.0.2"
errno = "0.3.11"
event-listener = "5.4.0"
flate2 = "1.1.1"
form_urlencoded = "1.2.1"
futures-executor = "0.3.31"
futures-io = "0.3.31"
futures-macro = "0.3.31"
gimli = "0.31.1"
glob = "0.3.2"
h2 = "0.4.10"
hermit-abi = "0.5.1"
hex = "0.4.3"
hmac = "0.13.0-pre.5"
httpdate = "1.0.3"
humantime = "2.2.0"
# hyper-rustls = "0.27.5"
iana-time-zone = "0.1.63"
instant = "0.1.13"
ipnet = "2.11.0"
libloading = "0.8.7"
mime = "0.3.17"
minimal-lexical = "0.1.4"
# nix = "0.30.1"
openssl-probe = "0.1.6"
# openssl-sys = "0.9.108"
pin-project = "1.1.10"
rayon = "1.10.0"
redox_syscall = "0.5.12"
# reqwest = "0.12.15"
# ring = "0.17.14"
rustc-demangle = "0.1.24"
rustc-hash = "2.1.1"
# rustls-pemfile = "2.2.0"
# rustls-webpki = "0.103.3"
same-file = "1.0.6"
serde_urlencoded = "0.7.1"
shlex = "1.3.0"
signal-hook-registry = "1.4.5"
static_assertions = "1.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
subtle = "2.6.1"
termcolor = "1.4.1"
textwrap = "0.16.2"
thread_local = "1.1.8"
time-macros = "0.2.22"
tinyvec_macros = "0.1.1"
tokio-macros = "2.5.0"
# tokio-rustls = "0.26.2"
toml_edit = "0.22.26"
# tower-service = "0.3.3"
tracing-attributes = "0.1.28"
# tracing-subscriber = "0.3.19"
try-lock = "0.2.5"
unicode-bidi = "0.3.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
unicode-xid = "0.2.6"
untrusted = "0.9.0"
uuid = "1.16.0"
walkdir = "2.5.0"
want = "0.3.1"
wasi = "0.14.2+wasi-0.2.4"
webpki-roots = "0.26.11"
# winapi = "0.3.9"
winnow = "0.7.10"
zeroize = "1.8.1"



# ansi_term = "0.12.1"
anstream = "0.6.18"
anstyle = "1.0.10"
anstyle-parse = "0.2.6"
anstyle-query = "1.1.2"
async-channel = "2.3.1"
bit-vec = "0.8.0"
bumpalo = "3.17.0"
cipher = "0.5.0-pre.8"
colorchoice = "1.0.3"
convert_case = "0.8.0"
dashmap = "7.0.0-rc2"
data-encoding = "2.9.0"
deranged = "0.4.0"
derive_more = "0.99.20"
filetime = "0.2.25"
fixedbitset = "0.5.7"
foreign-types = "0.5.0"
foreign-types-shared = "0.3.1"
futures-lite = "2.6.0"
half = "2.6.0"
home = "0.5.11"
# hyper-tls = "0.6.0"
ident_case = "1.0.1"
is-terminal = "0.4.16"
jobserver = "0.1.33"
js-sys = "0.3.77"
lazycell = "1.3.0"
linked-hash-map = "0.5.6"
matchers = "0.2.0"
matches = "0.1.10"
# native-tls = "0.2.14"
nu-ansi-term = "0.50.1"
num-complex = "0.4.6"
opaque-debug = "0.3.1"
# openssl = "0.10.72"
openssl-macros = "0.1.1"
ordered-float = "5.0.0"
overload = "0.1.1"
pest = "2.8.0"
petgraph = "0.8.1"
phf = "0.11.3"
phf_generator = "0.11.3"
phf_shared = "0.11.3"
powerfmt = "0.2.0"
proc-macro-crate = "3.3.0"
prost = "0.13.5"
prost-derive = "0.13.5"
prost-types = "0.13.5"
quick-error = "2.0.1"
# rustls-native-certs = "0.8.1"
# sct = "0.7.1"
serde_spanned = "0.6.8"
serde_yaml = "0.9.34+deprecated"
sha1 = "0.11.0-pre.5"
sharded-slab = "0.1.7"
siphasher = "1.0.1"
stable_deref_trait = "1.2.0"
sync_wrapper = "1.0.2"
synstructure = "0.13.2"
time-core = "0.1.4"
# tokio-native-tls = "0.3.1"
tokio-stream = "0.1.17"
toml_datetime = "0.6.9"
tonic = "0.13.1"
tower = "0.5.2"
tower-layer = "0.3.3"
tracing-log = "0.2.0"
utf8parse = "0.2.2"
vcpkg = "0.2.15"
wasm-bindgen-backend = "0.2.100"
wasm-bindgen-macro = "0.2.100"
wasm-bindgen-macro-support = "0.2.100"
web-sys = "0.3.77"
which = "7.0.3"
# winapi-i686-pc-windows-gnu = "0.4.0"
winapi-util = "0.1.9"
# winapi-x86_64-pc-windows-gnu = "0.4.0"
zerocopy-derive = "0.8.25"
# zstd = "0.13.3"
# zstd-safe = "7.2.4"
# zstd-sys = "2.0.15+zstd.1.5.7"






aes = "0.9.0-pre.3"
allocator-api2 = "0.3.0"
android_system_properties = "0.1.5"
arc-swap = "1.7.1"
arrayref = "0.3.9"
async-lock = "3.4.0"
async-stream = "0.3.6"
async-stream-impl = "0.3.6"
atomic-waker = "1.1.2"
bincode = "2.0.1"
bit-set = "0.8.0"
bitvec = "1.0.1"
block-padding = "0.4.0-rc.3"
bytemuck = "1.23.0"
cargo_metadata = "0.19.2"
cast = "0.3.0"
cexpr = "0.6.0"
cfg_aliases = "0.2.1"
clang-sys = "1.8.1"
combine = "4.6.7"
concurrent-queue = "2.5.0"
console = "0.15.11"
constant_time_eq = "0.4.2"
core-foundation = "0.10.0"
# criterion = "0.5.1"
criterion-plot = "0.5.0"
# crypto-mac # conflict
csv = "1.3.1"
csv-core = "0.1.12"
derivative = "2.2.0"
dirs = "6.0.0"
dirs-sys = "0.5.0"
displaydoc = "0.2.5"
dyn-clone = "1.0.19"
funty = "3.0.0-rc2"
globset = "0.4.16"
hyper-timeout = "0.5.2"
indoc = "2.0.6"
is_terminal_polyfill = "1.70.1"
libz-sys = "1.1.22"
lru = "0.14.0"
matchit_v8 = { version = "=0.8.4", package = "matchit" }
md-5 = "0.11.0-pre.5"
memmap2 = "0.9.5"
# mime_guess = "2.0.5"
multimap = "0.10.1"
# num = "0.1.43"
num-conv = "0.1.0"
num_enum = "0.7.3"
num_enum_derive = "0.7.3"
num_threads = "0.1.7"
oorandom = "11.1.5"
opentelemetry = "0.29.1"
os_str_bytes = "7.1.0"
parking = "2.2.1"
# pbkdf2_13 # conflict
pem = "3.0.5"
pest_derive = "2.8.0"
pest_generator = "2.8.0"
pest_meta = "2.8.0"
phf_codegen = "0.11.3"
quick-xml = "0.37.5"
rand_hc = "0.4.0"
rand_xorshift = "0.4.0"
# remove_dir_all = "1.0.0"
schannel = "0.1.27"
scoped-tls = "1.0.1"
security-framework = "3.2.0"
security-framework-sys = "2.14.0"
semver-parser = "0.10.3"
serde_with = "3.12.0"
serde_with_macros = "3.12.0"
sha-1 = "0.10.1"
tap = "1.0.1"
tinytemplate = "1.2.1"
tonic-build = "0.13.1"
tower-http = "0.6.4"
tungstenite = "0.26.2"
ucd-trie = "0.1.7"
unindent = "0.2.4"
urlencoding = "2.1.3"
vec_map = "0.8.2"
# wasm-bindgen-futures = "0.4.50"
# webpki = "0.22.4"
# windows = "0.61.1"
# winreg = "0.55.0"
wyz = "0.6.1"
wit-bindgen-rt = "0.42.1"



# aead = "0.6.0-rc.0"
alloc-no-stdlib = "2.0.4"
alloc-stdlib = "0.2.2"
android-tzdata = "0.1.1"
anstyle-wincon = "3.0.7"
async-compression = "0.4.23"
async-task = "4.7.1"
blocking = "1.6.1"
brotli = "8.0.1"
brotli-decompressor = "5.0.0"
camino = "1.1.9"
cargo-platform = "0.2.0"
ciborium = "0.2.2"
ciborium-io = "0.2.2"
ciborium-ll = "0.2.2"
cmake = "0.1.54"
colored = "3.0.0"
crc = "3.3.0"
ctor = "0.4.2"
# ctr = "0.10.0-pre.2"
diff = "0.1.13"
# dirs-next = "2.0.0"
# dirs-sys-next = "0.1.2"
dtoa = "1.0.10"
event-listener-strategy = "0.5.4"
fallible-iterator = "0.3.0"
ff = "0.14.0-pre.0"
float-cmp = "0.10.0"
flume = "0.11.1"
futures-timer = "3.0.3"
fxhash = "0.2.1"
group = "0.14.0-pre.0"
hashlink = "0.10.0"
hkdf = "0.13.0-pre.5"
hostname = "0.4.1"
http-body-util = "0.1.3"
hyper-util = "0.1.11"
iana-time-zone-haiku = "0.1.2"
inout = "0.2.0-rc.4"
# libsqlite3-sys = "0.33.0"
maplit = "1.0.2"
match_cfg = "0.1.0"
num-derive = "0.4.2"
peeking_take_while = "1.0.0"
phf_macros = "0.11.3"
# plotters = "0.3.7"
plotters-backend = "0.3.7"
plotters-svg = "0.3.7"
predicates = "3.1.3"
predicates-core = "1.0.9"
predicates-tree = "1.0.12"
pretty_assertions = "1.4.1"
# pyo3 = "0.24.2"
pyo3-macros = "0.24.2"
pyo3-macros-backend = "0.24.2"
rand_pcg = "0.9.0"
# redox_users = "0.5.0"
serde_bytes = "0.11.17"
serde_path_to_error = "0.1.17"
serde_repr = "0.1.20"
sha3 = "0.11.0-pre.5"
tar = "0.4.44"
terminal_size = "0.4.2"
termtree = "0.5.1"
tokio-io-timeout = "1.2.0"
tokio-tungstenite = "0.26.2"
tracing-futures = "0.2.5"
tracing-serde = "0.2.0"
twox-hash = "2.1.0"
universal-hash = "0.6.0-rc.0"
unsafe-libyaml = "0.2.11"
utf-8 = "0.7.6"
valuable = "0.1.1"
void = "1.0.2"
wait-timeout = "0.2.1"
waker-fn = "1.2.0"
web_atoms = "0.1.2"
windows-core = "0.61.0"
# windows_i686_gnullvm = "0.53.0"
xattr = "1.5.0"
xml-rs = "0.8.26"
yaml-rust = "0.4.5"
yansi = "1.0.1"
zeroize_derive = "1.4.2"
# zip = "2.6.1"





Inflector = "0.11.4"
adler2 = "2.0.0"
adler32 = "1.2.0"
anes = "0.2.0"
approx = "0.5.1"
async-executor = "1.13.2"
async-recursion = "1.1.1"
base16ct = "0.2.0"
blake2 = "0.11.0-pre.5"
# blake3 = "1.8.2"
bzip2 = "0.5.2"
codespan-reporting = "0.12.0"
const-random = "0.1.18"
const-random-macro = "0.1.16"
crc-catalog = "2.4.0"
crossbeam = "0.8.4"
# ctrlc = "3.4.7"
derive_builder = "0.20.2"
derive_builder_core = "0.20.2"
difflib = "0.4.0"
downcast = "0.11.0"
downcast-rs = "2.0.1"
dunce = "1.0.5"
ed25519-dalek = "2.1.1"
encode_unicode = "1.0.0"
enum-as-inner = "0.6.1"
fancy-regex = "0.14.0"
fragile = "2.0.1"
fs_extra = "1.3.0"
ghash = "0.6.0-rc.0"
# git2 = "0.20.2"
headers = "0.4.0"
headers-core = "0.3.0"
http-range-header = "0.4.2"
icu_collections = "2.0.0"
icu_locid = "1.5.0"
icu_locid_transform = "1.5.0"
icu_normalizer = "2.0.0"
icu_properties = "2.0.0"
icu_provider = "2.0.0"
icu_provider_macros = "2.0.0-beta1"
ignore = "0.4.23"
# image = "0.25.6"
indicatif = "0.17.11"
# jsonwebtoken = "9.3.1"
keccak = "0.2.0-pre.0"
litemap = "0.8.0"
lru-cache = "0.1.2"
md5 = "0.7.0"
mockall = "0.13.1"
mockall_derive = "0.13.1"
new_debug_unreachable = "1.0.6"
number_prefix = "0.4.0"
opentelemetry_sdk = "0.29.0"
pathdiff = "0.2.3"
png = "0.18.0-rc"
polyval = "0.7.0-rc.0"
precomputed-hash = "0.1.1"
# protobuf = "4.31.0-rc.2"
# quanta = "0.12.5"
raw-cpuid = "11.5.0"
serde_derive_internals = "0.29.1"
serial_test = "3.2.0"
serial_test_derive = "3.2.0"
sha1_smol = "1.0.1"
simd-adler32 = "0.3.7"
similar = "2.7.0"
simple_asn1 = "0.6.3"
string_cache = "0.8.9"
stringprep = "0.1.5"
# structopt = "0.3.26"
structopt-derive = "0.4.18"
# sysinfo = "0.35.1"
term = "1.0.2"
threadpool = "1.8.1"
tinystr = "0.8.1"
# ureq = "3.0.11"
utf16_iter = "1.0.5"
utf8_iter = "1.0.4"
value-bag = "1.11.1"
# whoami = "1.6.0"
write16 = "1.0.0"
writeable = "0.6.1"
yoke = "0.8.0"
yoke-derive = "0.8.0"
zerofrom = "0.1.6"
zerofrom-derive = "0.1.6"
zerovec = "0.11.2"
zerovec-derive = "0.11.1"




arbitrary = "1.4.1"
ascii = "1.1.0"
assert-json-diff = "2.0.2"
async-global-executor = "3.1.0"
async-process = "2.3.0"
# async-std = "1.13.1"
atoi = "2.0.0"
backoff = "0.4.0"
borsh = "1.5.7"
borsh-derive = "1.5.7"
byte-tools = "0.3.1"
bytecount = "0.6.8"
bytes-utils = "0.1.4"
# cbindgen = "0.28.0"
chrono-tz-build = "0.4.1"
color_quant = "1.1.0"
config = "0.15.11"
const_format = "0.2.34"
const_format_proc_macros = "0.2.34"
# crossterm = "0.29.0"
debugid = "0.8.0"
der-parser = "10.0.0"
derive_builder_macro = "0.20.2"
dotenvy = "0.15.7"
error-chain = "0.12.4"
futures-intrusive = "0.5.0"
getopts = "0.2.21"
gif = "0.13.1"
handlebars = "6.3.2"
hdrhistogram = "7.5.4"
idna_adapter = "1.2.1"
indenter = "0.3.3"
infer = "0.19.0"
inotify = "0.11.0"
inotify-sys = "0.1.5"
integer-encoding = "4.0.2"
iovec = "0.1.4"
jni = "0.21.1"
jpeg-decoder = "0.3.1"
kv-log-macro = "1.0.7"
language-tags = "0.3.2"
lexical-parse-float = "1.0.5"
lexical-parse-integer = "1.0.5"
lexical-util = "1.0.6"
# libgit2-sys = "0.18.1+1.9.0"
miow = "0.6.0"
# net2 = "0.2.39"
normalize-line-endings = "0.3.0"
notify = "8.0.0"
# ntapi = "0.4.1"
openssl-src = "300.5.0+3.5.0"
opentelemetry-semantic-conventions = "0.29.0"
option-ext = "0.2.0"
# p256 clash = "0.14.0-pre.2"
parse-zoneinfo = "0.3.1"
piper = "0.2.4"
proptest = "1.6.0"
ptr_meta = "0.3.0"
ptr_meta_derive = "0.3.0"
# quinn = "0.11.8"
# quinn-proto = "0.11.12"
rand_distr = "0.5.1"
rawpointer = "0.2.1"
resolv-conf = "0.7.3"
rkyv_derive = "0.8.10"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rust-ini = "0.21.1"
# rust_decimal = "1.37.1"
rusticata-macros = "5.0.0"
rusty-fork = "0.3.0"
schemars_derive = "0.8.22"
seahash = "4.1.0"
secrecy = "0.10.3"
serde-value = "0.7.0"
serde_cbor = "0.11.2"
simdutf8 = "0.1.5"
snafu = "0.8.5"
snafu-derive = "0.8.5"
system-configuration = "0.6.1"
trust-dns-proto = "0.23.2"
# trust-dns-resolver = "0.23.2"
unicode_categories = "0.1.1"
weezl = "0.1.8"
widestring = "1.2.0"
windows-result = "0.3.2"
x509-parser = "0.17.0"
xmlparser = "0.13.6"


actix-codec = "0.5.2"
actix-http = "3.11.0"
actix-macros = "0.2.4"
actix-router = "0.5.3"
actix-rt = "2.10.0"
actix-server = "2.6.0"
actix-service = "2.0.3"
actix-utils = "3.0.1"
# actix-web = "4.11.0"
actix-web-codegen = "4.3.0"
asn1-rs = "0.8.0-beta.1"
asn1-rs-derive = "0.7.0"
asn1-rs-impl = "0.3.0"
# aws-config = "1.6.2"
# aws-sdk-sso = "1.67.0"
# aws-sdk-sts = "1.68.0"
aws-sigv4 = "1.3.1"
aws-smithy-async = "1.2.5"
aws-smithy-http = "0.62.1"
aws-smithy-json = "0.61.3"
aws-smithy-query = "0.60.7"
aws-smithy-types = "1.3.1"
aws-smithy-xml = "0.60.9"
base64-simd = "0.8.0"
bs58 = "0.5.1"
bytecheck_derive = "0.8.1"
bytemuck_derive = "1.9.3"
bytesize = "1.3.3"
bytestring = "1.4.0"
cesu8 = "1.1.0"
clap_complete = "4.5.50"
# cxx = "1.0.158"
cxx-build = "1.0.158"
cxxbridge-flags = "1.0.158"
cxxbridge-macro = "1.0.158"
deadpool = "0.12.2"
dlv-list = "0.6.0"
env_filter = "0.1.3"
errno-dragonfly = "0.1.2"
failure = "0.1.8"
failure_derive = "0.1.8"
fake-simd = "0.1.2"
fallible-streaming-iterator = "0.1.9"
fdeflate = "0.3.7"
# fs2 = "0.4.3"
gethostname = "1.0.2"
# gloo-timers = "0.3.0"
hash32 = "0.3.1"
inventory = "0.3.20"
jni-sys = "0.4.0"
lexical-write-float = "1.0.5"
lexical-write-integer = "1.0.5"
lz4_flex = "0.11.3"
maybe-uninit = "2.0.0"
metrics = "0.24.2"
nanorand = "0.7.0"
nodrop = "0.1.14"
# opentelemetry-http = "0.29.0"
# opentelemetry-otlp = "0.29.0"
ordered-multimap = "0.7.3"
os_pipe = "1.2.1"
ouroboros = "0.18.5"
ouroboros_macro = "0.18.5"
outref = "0.5.2"
psm = "0.1.26"
rand_isaac = "0.4.0"
# rand_jitter = "0.5.0"
rand_os = "0.2.2"
rand_xoshiro = "0.7.0"
regex-lite = "0.1.6"
safemem = "0.3.3"
serde_qs = "0.15.0"
shell-words = "1.1.0"
smawk = "0.3.2"
sqlformat = "0.3.5"
# sqlx = "0.8.5"
sqlx-core = "0.8.5"
sqlx-macros = "0.8.5"
thrift = "0.17.0"
tiff = "0.9.1"
triomphe = "0.1.14"
typed-builder = "0.21.0"
unarray = "0.1.4"
# wasm-streams = "0.4.2"
web-time = "1.1.0"

# 900th popular crates
aliasable = "0.1.3"
async-broadcast = "0.7.2"
aws-credential-types = "1.2.3"
axum-macros = "0.5.0"
base-x = "0.2.11"
blake2b_simd = "1.0.3"
castaway = "0.2.3"
cfg-expr = "0.19.0"
# chacha20 = "0.10.0-pre.3" - clash
# chacha20poly1305 = "0.11.0-pre.2" - clash
chunked_transfer = "1.5.0"
# comfy-table = "7.1.4"
console_error_panic_hook = "0.1.7"
# curl = "0.4.47"
# curl-sys = "0.4.80+curl-8.12.1"
deadpool-runtime = "0.1.4"
derive_arbitrary = "1.4.1"
dialoguer = "0.11.0"
directories = "6.0.0"
dotenv = "0.15.0"
ena = "0.14.3"
endian-type = "0.2.0"
enum-iterator = "2.1.0"
enum-iterator-derive = "1.4.0"
enumflags2 = "0.7.11"
enumflags2_derive = "0.7.11"
fiat-crypto = "0.2.9"
foldhash = "0.1.5"
fuchsia-cprng = "0.1.1"
globwalk = "0.9.1"
# http-types = "2.12.0"
if_chain = "1.0.2"
ipnetwork = "0.21.1"
json-patch = "4.0.0"
# k256 = "0.14.0-pre.2" - clash
kernel32-sys = "0.2.2"
leb128 = "0.2.5"
# libredox = "0.1.3"
local-channel = "0.1.5"
local-waker = "0.1.4"
lz4 = "1.28.1"
mach = "0.3.2"
nalgebra = "0.33.2"
ndarray = "0.16.1"
nibble_vec = "0.1.0"
nohash-hasher = "0.2.0"
poly1305 = "0.9.0-rc.0"
proc-macro-nested = "0.1.7"
# procfs = "0.17.0"
quickcheck = "1.0.3"
radix_trie = "0.2.1"
raw-window-handle = "0.6.2"
# rdrand = "0.8.3"
# redis = "0.31.0"
ref-cast-impl = "1.0.24"
relative-path = "2.0.1"
rgb = "0.8.50"
rpassword = "7.4.0"
rstest = "0.25.0"
# rusqlite = "0.35.0"
# secp256k1 = "0.31.0"
# serde-wasm-bindgen = "0.6.5"
signal-hook-mio = "0.2.4"
slotmap = "1.0.7"
smol_str = "0.3.2"
sqlx-macros-core = "0.8.5"
# sqlx-sqlite = "0.8.5"
string_cache_codegen = "0.5.4"
tagptr = "0.2.0"
# tempdir = "0.3.7"
# tikv-jemalloc-sys = "0.6.0+5.3.0-1-ge13ca993e8ccb9ba9847cc330696e02839f328f7" - clash
# tikv-jemallocator = "0.6.0" - clash
time-macros-impl = "0.1.2"
tokio-retry = "0.3.0"
tracing-appender = "0.2.3"
ttf-parser = "0.25.1"
typed-arena = "2.0.2"
uint = "0.10.0"
unreachable = "1.0.0"
unsigned-varint = "0.8.0"
utf8-ranges = "1.0.5"
vsimd = "0.8.0"
# warp = "0.3.7"
winapi-build = "0.1.1"
windows-strings = "0.4.0"

# 1000th popular crates:
ark-ff = "0.5.0"
ark-ff-asm = "0.5.0"
ark-ff-macros = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
arrow-array = "55.0.0"
arrow-buffer = "55.0.0"
arrow-cast = "55.0.0"
arrow-data = "55.0.0"
arrow-schema = "55.0.0"
arrow-select = "55.0.0"
auto_impl = "1.3.0"
aws-runtime = "1.5.7"
# aws-sdk-s3 = "1.85.0"
aws-smithy-checksums = "0.63.1"
aws-smithy-eventstream = "0.60.8"
aws-smithy-runtime = "1.8.3"
aws-smithy-runtime-api = "1.8.0"
beef = "0.5.2"
bit_field = "0.10.2"
bitmaps = "3.2.1"
byte-slice-cast = "1.2.3"
cache-padded = "1.3.0"
cadence = "1.5.0"
color-eyre = "0.6.4"
compact_str = "0.9.0"
deunicode = "1.6.2"
difference = "2.0.0"
educe = "0.6.0"
enum-ordinalize = "4.3.0"
enum_dispatch = "0.3.13"
# findshlibs = "0.10.2"
fixed-hash = "0.8.0"
fraction = "0.15.3"
futf = "0.1.5"
# governor = "0.10.0"
html5ever = "0.31.0"
humansize = "2.1.3"
humantime-serde = "1.1.1"
impl-codec = "0.7.1"
include_dir = "0.7.4"
# ipconfig = "0.3.2"
# jsonpath-rust = "1.0.1"
lalrpop = "0.22.1"
lalrpop-util = "0.22.1"
# librocksdb-sys = "0.17.1+9.9.3"
# libssh2-sys = "0.3.1"
mac = "0.1.1"
markup5ever = "0.16.1"
# metrics-util = "0.19.1"
miette = "7.6.0"
miette-derive = "7.6.0"
# moka = "0.12.10"
multihash = "0.19.3"
no-std-compat = "0.4.1"
nonzero_ext = "0.3.0"
num-format = "0.4.4"
object_store = "0.12.0"
opentelemetry_api = "0.20.0"
os_info = "3.11.0"
parity-scale-codec-derive = "3.7.4"
pico-args = "0.5.0"
pretty_env_logger = "0.5.0"
primitive-types = "0.13.1"
publicsuffix = "2.3.0"
# rcgen = "0.13.2"
# reqwest-middleware = "0.4.2"
retain_mut = "0.1.9"
# rocksdb = "0.23.0"
# secp256k1-sys = "0.11.0"
sentry-types = "0.38.0"
seq-macro = "0.3.6"
simba = "0.9.0"
simple_logger = "5.0.0"
sized-chunks = "0.7.0"
sketches-ddsketch = "0.3.0"
smartstring = "1.0.1"
# sqlparser = "0.56.0"
# sqlx-mysql = "0.8.5"
# stacker = "0.1.21"
take_mut = "0.2.2"
tendril = "0.4.3"
# test-log = "0.2.17"
tokio-test = "0.4.4"
tonic-health = "0.13.1"
tracing-error = "0.2.1"
unicode-properties = "0.1.3"
version-compare = "0.2.0"
vte = "0.15.0"
wasm-encoder = "0.230.0"
wast = "230.0.0"
windows-implement = "0.60.0"
windows-interface = "0.59.1"
windows-registry = "0.5.1"
xz2 = "0.1.7"
yasna = "0.5.2"
